force-app/main/default/objects/JE_Auction__c/JE_Auction__c.object-meta.xml
<CustomObject>
    <label>JE Auction</label>
    <nameField>
        <displayFormat>JEA-{0000}</displayFormat>
        <label>JE Auction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JE Auction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>