force-app/main/default/objects/JE_Auction__c/fields/Art_Craft__c.field-meta.xml
<CustomField>
    <fullName>Art_Craft__c</fullName>
    <label>Art/Craft #</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>