force-app/main/default/objects/JE_Auction__c/fields/Art_or_Craft__c.field-meta.xml
<CustomField>
    <fullName>Art_or_Craft__c</fullName>
    <label>Art/Craft</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Art</fullName>
            </value>
            <value>
                <fullName>Craft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>