force-app/main/default/objects/JE_Auction__c/fields/Bidder_Email__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Email__c</fullName>
    <label>Bidder Email</label>
    <type>Email</type>
</CustomField>