force-app/main/default/objects/JE_Auction__c/fields/Bidder_Name__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Name__c</fullName>
    <label>Bidder Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>