force-app/main/default/objects/JE_Auction__c/fields/Last_Bidder__c.field-meta.xml
<CustomField>
    <fullName>Last_Bidder__c</fullName>
    <label>Last Bidder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>