force-app/main/default/objects/JE_Auction__c/fields/Last_Bidder_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Bidder_Email__c</fullName>
    <label>Last Bidder Email</label>
    <type>Email</type>
</CustomField>