force-app/main/default/objects/JE_Auction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Art_Craft__c</columns>
    <columns>Creator_Name__c</columns>
    <columns>Art_or_Craft__c</columns>
    <columns>Bidder_Name__c</columns>
    <columns>Bidder_Email__c</columns>
    <columns>Bid_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>